--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -26,10 +26,11 @@
       
             @include mobile{
               align-items: flex-start;
+              border-radius: 0;
             }
       
             img {
-              height: 90%;
+              height: 100%;
       
               @include mobile{
                 height: 50%;
