--- a/src/components/work/projects.scss
+++ b/src/components/work/projects.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .projects {
-  background-color: crimson;
+  background-color: cornflowerblue;
   display: flex;
   align-items: center;
   justify-content: center;
