--- a/src/components/Education/certification.scss
+++ b/src/components/Education/certification.scss
@@ -1,8 +1,7 @@
 @import "../../global.scss";
 
 .certificates {
-  background-image:
-  linear-gradient(to bottom, rgba(185, 190, 45, 0.5), rgba(8, 8, 244, 0.5));
+  background-color: cadetblue;
   display: flex;
   align-items: center;
   justify-content: center;
