--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,6 @@
 @import "../../global.scss";
 .intro{
-    background-image:
-  linear-gradient(to bottom, rgba(190, 190, 45, 0.5), rgba(14, 14, 163, 0.5));
+    background-color: whitesmoke;
     display: flex;
 
     @include mobile{
